# Data-Analysis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_DELIVERY_SUMMARY.txt  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_READY.txt  DEPLOY_TO_STREAMLIT_CLOUD.md  DIAGNOSE_STREAMLIT_CLOUD.md  DOCUMENTATION_INDEX.md  FIX_STREAMLIT_CLOUD.md  GETTING_STARTED_PRODUCTIONIZED.txt  GITHUB_COMMANDS.txt  GITHUB_QUICK_START.md  GITHUB_SETUP.md  LICENSE  LOGGING_AND_ERROR_HANDLING.txt  PRODUCTIONIZATION.md  PRODUCTION_LOGGING_SUMMARY.txt  PROJECT_POLISH_SUMMARY.txt  QUICK_DEPLOY.md  QUICK_REFERENCE.txt  QUICK_RUN.md  README.md  READY_FOR_GITHUB.txt  RELEASE_READY.md  RUN_LOCALLY.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_CLOUD_FIX.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  TODO.md  analytics_dashboard.ipynb  app.py  deploy.ps1  initialize_streamlit.py  pyproject.toml  requirements-lock.txt  requirements.txt  run.ps1  (+5 more)
.github/workflows/: code-quality.yml  etl-tests.yml
Data/Processed/: dim_users.csv  fact_orders.csv  fact_reviews.csv
Data/analytics/: funnel.csv  kpis.csv  monthly_revenue.csv  top10_products_by_revenue.csv
src/: config.py  extract.py  incremental.py  load.py  logger_config.py  pipeline.py  transform_staging.py  transform_warehouse.py  validation.py
tests/: test_extract.py  test_pipeline.py
